attempting silent uninstall

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -53,5 +53,14 @@
         </activity>
          <receiver android:name=".MyReceiver"></receiver>
          <service android:name=".AlertService" />
+         <receiver 
+         android:name=".MyDeviceAdminReceiver"
+         android:permission="android.permission.BIND_DEVICE_ADMIN">
+    <meta-data android:name="android.app.device_admin"
+            android:resource="@xml/device_admin_uses_policies" />
+    <intent-filter>
+        <action android:name="android.app.action.DEVICE_ADMIN_ENABLED" />
+    </intent-filter>
+</receiver>
     </application>
 </manifest>
