--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,22 +7,21 @@
          In most cases you can leave this as-is, but you if you want to provide
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-feature android:name="android.hardware.wifi" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/> //not need 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/> // for fetch data
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/> //to access wifi
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/> // same
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> // same
+    <uses-feature android:name="android.hardware.wifi" /> //same
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> //for location (not implement)
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> //same
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-    <uses-permission android:name="android.permission.REAL_GET_TASKS" />
-    <uses-permission android:name="android.permission.GET_TASKS" />
-    <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS" tools:ignore="ProtectedPermissions" />
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/> 
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" /> // show pop up over other apps
+    <uses-permission android:name="android.permission.REAL_GET_TASKS" /> // get running apps (but not working) 
+    <uses-permission android:name="android.permission.GET_TASKS" /> //same
+    <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS" tools:ignore="ProtectedPermissions" /> // app usage
+   
 
 
     
