--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
     <uses-permission android:name="android.permission.REAL_GET_TASKS" /> // get running apps (but not working) 
     <uses-permission android:name="android.permission.GET_TASKS" /> //same
     <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS" tools:ignore="ProtectedPermissions" /> // app usage
+    <uses-permission android:name="android.permission.EXPAND_STATUS_BAR" />
    
 
 
